<resources>
    <string name="app_name">Camera Scanner</string>
    <string name="made_in_india">MADE IN INDIA</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detail">Detail :</string>
    <string name="name">Name :</string>
    <string name="phone_no">Phone no:</string>
    <string name="address">Address :</string>
    <string name="email">Email :</string>
    <string name="website">Website :</string>
    <string name="map_result">Map Result</string>
    <string name="result">Result</string>
    <string name="sms_result">SMS Result</string>
    <string name="message">Message</string>
    <string name="restart">Restart the app</string>
    <string name="phone">Phone no</string>
    <string name="send_sms">Send SMS</string>
    <string name="update_downloaded">Please download the updates</string>
</resources>